test/corpus/complex_interpolation.txt
==================
Complex interpolation
==================

<view>{{m.prefix}}{{age}}</view>
<text>{{items[0].title}}</text>
<text>{{user.getName()}}</text>

---

(document
  (element
    (start_tag
      (tag_name))
    (interpolation
      (interpolation_start)
      (expression)
      (interpolation_end))
    (interpolation
      (interpolation_start)
      (expression)
      (interpolation_end))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name))
    (interpolation
      (interpolation_start)
      (expression)
      (interpolation_end))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name))
    (interpolation
      (interpolation_start)
      (expression)
      (interpolation_end))
    (end_tag
      (tag_name))))
