test/corpus/conditional_rendering.txt
==================
Conditional rendering
==================

<view wx:if="{{showFlag}}">Show content</view>
<view wx:elif="{{!showFlag && list.length > 0}}">Alternative content</view>
<view wx:else>Default content</view>

---

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (interpolation
            (interpolation_start)
            (expression)
            (interpolation_end)))))
    (text)
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (interpolation
            (interpolation_start)
            (expression)
            (interpolation_end)))))
    (text)
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)))
    (text)
    (end_tag
      (tag_name))))
