test/corpus/interpolation.txt
==================
Simple interpolation
==================

<text>{{name}}</text>
<text>{{user.name}} - {{user.age}}</text>

---

(document
  (element
    (start_tag
      (tag_name))
    (interpolation
      (interpolation_start)
      (expression)
      (interpolation_end))
    (end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name))
    (interpolation
      (interpolation_start)
      (expression)
      (interpolation_end))
    (text)
    (interpolation
      (interpolation_start)
      (expression)
      (interpolation_end))
    (end_tag
      (tag_name))))
