test/corpus/interpolation_attributes.txt
==================
Interpolation in attributes
==================

<view class="{{containerClass}}" hidden="{{!showFlag}}">
  <text data-id="{{item.id}}">{{item.name}}</text>
  <view style="{{forceWidth ? `width: ${10 - 5}rpx` : ''}}" />
</view>

---

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (interpolation
            (interpolation_start)
            (expression)
            (interpolation_end))))
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (interpolation
            (interpolation_start)
            (expression)
            (interpolation_end)))))
    (element
      (start_tag
        (tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value
            (interpolation
              (interpolation_start)
              (expression)
              (interpolation_end)))))
      (interpolation
        (interpolation_start)
        (expression)
        (interpolation_end))
      (end_tag
        (tag_name)))
    (element
        (self_closing_tag
          (tag_name)
          (attribute
            (attribute_name)
            (quoted_attribute_value
              (interpolation
                (interpolation_start)
                (expression)
                (interpolation_end))))))
    (end_tag
      (tag_name))))
