test/corpus/multiple_attributes.txt
==================
Multiple attributes
==================

<view class="container" id="main" data-type="section" hidden="{{false}}">
  <text bindtap="onTap" style="color: red;">Click me</text>
</view>

---

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value))
    (attribute
      (attribute_name)
      (quoted_attribute_value))
    (attribute
      (attribute_name)
      (quoted_attribute_value))
    (attribute
      (attribute_name)
      (quoted_attribute_value
        (interpolation
          (interpolation_start)
          (expression)
          (interpolation_end)))))
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value))
      (attribute
        (attribute_name)
        (quoted_attribute_value)))
    (text)
    (end_tag
      (tag_name)))
  (end_tag
    (tag_name))))
