test/corpus/template_definition.txt
==================
Template definition
==================

<template name="userCard">
  <view class="card">
    <text>{{name}}</text>
    <text>{{age}}</text>
  </view>
</template>

---

(document
  (template_element
    (template_start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value)))
    (element
      (start_tag
        (tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value)))
      (element
        (start_tag
          (tag_name))
        (interpolation
          (interpolation_start)
          (expression)
          (interpolation_end))
        (end_tag
          (tag_name)))
      (element
        (start_tag
          (tag_name))
        (interpolation
          (interpolation_start)
          (expression)
          (interpolation_end))
        (end_tag
          (tag_name)))
      (end_tag
        (tag_name)))
    (template_end_tag
      (tag_name))))
