test/corpus/template_usage.txt
==================
Template usage
==================

<template is="userCard" data="{{...user}}" />
<template is="layout" data="{{title: 'Main'}}">
  <text slot="header">Header</text>
  <text>Content</text>
</template>

---

(document
  (element
    (self_closing_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value))
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (interpolation
            (interpolation_start)
            (expression)
            (interpolation_end))))))
  (template_element
    (template_start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value))
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (interpolation
            (interpolation_start)
            (expression)
            (interpolation_end)))))
    (element
      (start_tag
        (tag_name)
        (attribute
          (attribute_name)
          (quoted_attribute_value)))
      (text)
      (end_tag
        (tag_name)))
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (template_end_tag
      (tag_name))))
