test/corpus/wxs_inline.txt
==================
WXS inline module
==================

<view>2 * 7 = {{inline.double(7)}}</view>
<wxs module="inline">
  var double = function (x) { return x * 2; };
  module.exports.double = double;
</wxs>
<view>2 * 8 = {{inline.double(8)}}</view>

---

(document
  (element
    (start_tag
      (tag_name))
    (text)
    (interpolation
      (interpolation_start)
      (expression)
      (interpolation_end))
    (end_tag
      (tag_name)))
  (wxs_element
    (wxs_start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value)))
    (raw_text)
    (wxs_end_tag
      (tag_name)))
  (element
    (start_tag
      (tag_name))
    (text)
    (interpolation
      (interpolation_start)
      (expression)
      (interpolation_end))
    (end_tag
      (tag_name))))
